Это второй проект из книги Андроид для профессионалов. Отличие от книги - используется viewBinding - используется Navigation Component - добавлен RecyclerView

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/crimeFragment">
+    app:startDestination="@id/crimeListFragment">
 
     <fragment
         android:id="@+id/crimeFragment"
         android:name="non.mametich.criminal_intent.ui.CrimeFragment"
         android:label="fragment_crime"
         tools:layout="@layout/fragment_crime" />
+    <fragment
+        android:id="@+id/crimeListFragment"
+        android:name="non.mametich.criminal_intent.ui.CrimeListFragment"
+        android:label="CrimeListFragment" />
 </navigation>
